# filings-and-payments

./: .env.example  .gitignore  README.md  filings-retrospective-2025.md  pyproject.toml
.github/workflows/: taxops-daily.yml  taxops-polling.yml  taxops-weekly.yml
export/jira-quality-gate/: MIGRATION.md  README.md  a2_quality_gate.py  a3_label_quadrant.py  a4_signoff_mismatch.py  a5_sla_watcher.py  a6_weekly_digest.py  common.py  run_polling_suite.sh  sync_to_drive.py  test_email_alert.py  wbr_history.json
output/: Q2_2026_July_Filings_Calendar.xlsx  unsubmitted-amendments-backlog-slack-thread.docx
scripts/: generate_draft.py  generate_q2_july_filings_calendar.py  slack_thread_to_docx.py
src/tax_ops_filing_bot/: __main__.py  cli.py  main.py
src/tax_ops_filing_bot/jira/: __init__.py  client.py  payload.py
src/tax_ops_filing_bot/llm/: __init__.py  prompts.py  wrapper.py
src/tax_ops_filing_bot/models/: __init__.py  (+4 more)
taxops/: ZAPIER_SLACK_THREADING.md  a1_wfo_accountability.py  a2_quality_gate.py  a3_label_quadrant.py  a4_signoff_mismatch.py  a5_sla_watcher.py  a6_weekly_digest.py  a7_new_scope.py  a8_auto_label.py  a9_bad_ticket.py  cleanup_governance_labels.py  common.py  install_workflows.sh  run_polling_suite.sh  wbr_history.json
taxops/github-workflows/: taxops-daily.yml  taxops-polling.yml  taxops-weekly.yml
tests/: test_app_e2e.py  test_filing_reference.py  test_intake.py  test_jira.py  test_llm.py  test_mapping.py  test_message_filter.py  test_models.py  test_prompts.py  test_scaffold.py  test_services.py  test_slack.py  test_sync_service.py
(+16 files in other folders)
