[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-ops-filing-bot"
version = "0.1.0"
description = "Standalone Slack bot for Tax Ops filing Jira issue intake"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.18,<2",
    "slack-sdk>=3.27,<4",
    "httpx>=0.27",
    "anthropic>=0.39",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
tax-ops-filing-bot = "tax_ops_filing_bot.main:main"
filing-draft = "tax_ops_filing_bot.cli:draft_from_thread"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
